--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Главная</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
+	<meta name="yandex-verification" content="c1ba2bca46d2f7e5" />
 	<link rel="stylesheet" href="css/style.min.css?_v=20230206211753">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
